--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
-# Done to increase the memory available to gradle.
+# Done to increase the memory available to gradle
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-# check these on https://fabricmc.net/develop
+# Check these on https://fabricmc.net/develop
 minecraft_version=1.21.5
 yarn_mappings=1.21.5+build.1
-loader_version=0.16.13
+loader_version=0.16.14
 
 # Mod Properties
 mod_version=1.0.0
@@ -14,4 +14,6 @@ maven_group=furiouswhqle
 archives_base_name=no-crop-trample
 
 # Dependencies
-fabric_version=0.120.0+1.21.5
+
+# https://modrinth.com/mod/fabric-api/versions?g=1.21.5&l=fabric
+fabric_version=0.121.0+1.21.5
