--- a/gradle.properties
+++ b/gradle.properties
@@ -2,19 +2,19 @@
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
+# IntelliJ IDEA is not yet fully compatible with configuration cache, see: https://github.com/FabricMC/fabric-loom/issues/1349
+org.gradle.configuration-cache=false
+
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.6
-yarn_mappings=1.21.6+build.1
-loader_version=0.16.14
-loom_version=1.10-SNAPSHOT
+minecraft_version=1.21.10
+loader_version=0.17.3
+loom_version=1.12-SNAPSHOT
 
 # Mod Properties
-mod_version=1.0.2
+mod_version=1.0.3
 maven_group=furiouswhqle
 archives_base_name=no-crop-trample
 
 # Dependencies
-
-# https://modrinth.com/mod/fabric-api/versions?g=1.21.6&l=fabric
-fabric_version=0.128.0+1.21.6
+fabric_version=0.138.0+1.21.10
